--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -28,17 +28,6 @@
             border-radius: 5px;
             margin: 5px;
         }
-        .controls {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        .controls button {
-            margin-bottom: 5px;
-        }
-        .controls p {
-            margin: 0;
-        }
         #main-controls {
             display: flex;
             align-items: center;
@@ -54,10 +43,6 @@
     <div id="video-container">
         <div class="video-wrapper" id="local-wrapper">
             <video id="localVideo" autoplay playsinline muted></video>
-            <div class="controls">     
-                <button class="unlike-button" style="display: none;">⚡</button>
-                <p class="unlikes-count" style="display: none;">Unlikes reçus: 0</p>
-            </div>
         </div>
     </div>
     <div id="main-controls">
@@ -73,12 +58,6 @@
         <button id="callButton">Appeler</button>
         <button id="hangupButton">Raccrocher</button>
         <label>
-            <input type="checkbox" id="muteCheckbox"> Mute Mon Micro
-        </label>
-        <label>
-            <input type="checkbox" id="muteRemoteCheckbox"> Mute Le Micro du Deuxième Utilisateur
-        </label>
-        <label id="cameraLabel">
             Sélectionner la caméra :
             <select id="cameraSelect"></select>
         </label>
@@ -89,10 +68,6 @@
         let localStream;
         let peer;
         let call;
-        let likedUsers = {};
-        let unlikedUsers = {};
-        let lastCallerId = '';
-        let peerConnections = {};
 
         const callButton = document.getElementById('callButton');
         const hangupButton = document.getElementById('hangupButton');
@@ -100,10 +75,7 @@
         const myIdInput = document.getElementById('myId');
         const peerIdInput = document.getElementById('peerId');
         const localVideo = document.getElementById('localVideo');
-        const muteCheckbox = document.getElementById('muteCheckbox');
-        const muteRemoteCheckbox = document.getElementById('muteRemoteCheckbox');
         const cameraSelect = document.getElementById('cameraSelect');
-        const videoContainer = document.getElementById('video-container');
 
         generateMyIdButton.addEventListener('click', () => {
             const myId = generateRandomId();
@@ -136,22 +108,10 @@
                         incomingCall.on('stream', (remoteStream) => {
                             addRemoteVideo(incomingCall.peer, remoteStream);
                         });
-                        lastCallerId = incomingCall.peer;
-                        peerIdInput.value = lastCallerId;
                     })
                     .catch((err) => {
                         console.error('Failed to get local stream', err);
                     });
-            });
-
-            peer.on('connection', conn => {
-                conn.on('data', data => {
-                    if (data.type === 'like') {
-                        handleLike(conn.peer);
-                    } else if (data.type === 'unlike') {
-                        handleUnlike(conn.peer);
-                    }
-                });
             });
         }
 
@@ -165,7 +125,6 @@
                 .then(stream => {
                     localStream = stream;
                     localVideo.srcObject = stream;
-                    applyMicMute();
                     return stream;
                 })
                 .catch((err) => {
@@ -175,12 +134,6 @@
         }
 
         async function updateCameraSelect() {
-            const device = detectDevice();
-            let constraints = {
-                audio: true,
-                video: { deviceId: cameraSelect.value ? { exact: cameraSelect.value } : undefined }
-            };
-
             const devices = await navigator.mediaDevices.enumerateDevices();
             const videoDevices = devices.filter(device => device.kind === 'videoinput');
             cameraSelect.innerHTML = '';
@@ -192,47 +145,28 @@
                 cameraSelect.appendChild(option);
             });
 
-            // Restore the previously selected camera
             const savedCameraId = localStorage.getItem('selectedCameraId');
             if (savedCameraId) {
                 cameraSelect.value = savedCameraId;
             }
 
-            return constraints;
+            return {
+                audio: true,
+                video: { deviceId: cameraSelect.value ? { exact: cameraSelect.value } : undefined }
+            };
         }
 
-        function detectDevice() {
-            const userAgent = navigator.userAgent || navigator.vendor || window.opera;
-            if (/windows phone/i.test(userAgent)) {
-                return "Windows Phone";
-            }
-            if (/android/i.test(userAgent)) {
-                return "Android";
-            }
-            if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
-                return "iOS";
-            }
-            return "unknown";
-        }
-
-        function applyMicMute() {
+        cameraSelect.addEventListener('change', async () => {
+            localStorage.setItem('selectedCameraId', cameraSelect.value);
             if (localStream) {
-                const audioTracks = localStream.getAudioTracks();
-                if (audioTracks.length > 0) {
-                    audioTracks[0].enabled = !muteCheckbox.checked;
-                }
+                const videoTracks = localStream.getVideoTracks();
+                videoTracks.forEach(track => localStream.removeTrack(track));
+                const constraints = await updateCameraSelect();
+                const newStream = await navigator.mediaDevices.getUserMedia(constraints);
+                localStream.addTrack(newStream.getVideoTracks()[0]);
+                localVideo.srcObject = localStream;
             }
-        }
-
-        function sendMuteSignal(mute) {
-            if (call) {
-                call.peerConnection.getSenders().forEach(sender => {
-                    if (sender.track && sender.track.kind === 'audio') {
-                        sender.track.enabled = !mute;
-                    }
-                });
-            }
-        }
+        });
 
         callButton.addEventListener('click', () => {
             const peerId = peerIdInput.value.trim();
@@ -245,7 +179,6 @@
                 .then((stream) => {
                     localStream = stream;
                     localVideo.srcObject = stream;
-                    applyMicMute();
                     call = peer.call(peerId, stream);
                     call.on('stream', (remoteStream) => {
                         addRemoteVideo(peerId, remoteStream);
@@ -267,27 +200,7 @@
                 call.close();
             }
             localVideo.srcObject = null;
-            videoContainer.querySelectorAll('.video-wrapper').forEach(wrapper => wrapper.remove());
-        });
-
-        muteCheckbox.addEventListener('change', () => {
-            applyMicMute();
-        });
-
-        muteRemoteCheckbox.addEventListener('change', () => {
-            sendMuteSignal(muteRemoteCheckbox.checked);
-        });
-
-        cameraSelect.addEventListener('change', async () => {
-            localStorage.setItem('selectedCameraId', cameraSelect.value);
-            if (localStream) {
-                const videoTracks = localStream.getVideoTracks();
-                videoTracks.forEach(track => localStream.removeTrack(track));
-                const constraints = await updateCameraSelect();
-                const newStream = await navigator.mediaDevices.getUserMedia(constraints);
-                localStream.addTrack(newStream.getVideoTracks()[0]);
-                localVideo.srcObject = localStream;
-            }
+            document.querySelectorAll('.video-wrapper').forEach(wrapper => wrapper.remove());
         });
 
         function addRemoteVideo(peerId, remoteStream) {
@@ -302,27 +215,7 @@
                 video.playsInline = true;
                 video.srcObject = remoteStream;
                 videoWrapper.appendChild(video);
-
-                const controls = document.createElement('div');
-                controls.className = 'controls';
-                const likeButton = document.createElement('button');
-                likeButton.textContent = '❤️';
-                likeButton.addEventListener('click', () => handleLike(peerId));
-                const unlikeButton = document.createElement('button');
-                unlikeButton.textContent = '⚡';
-                unlikeButton.addEventListener('click', () => handleUnlike(peerId));
-                controls.appendChild(likeButton);
-                controls.appendChild(unlikeButton);
-                const likesCount = document.createElement('p');
-                likesCount.className = 'likes-count';
-                likesCount.textContent = 'Likes reçus: 0';
-                controls.appendChild(likesCount);
-                const unlikesCount = document.createElement('p');
-                unlikesCount.className = 'unlikes-count';
-                unlikesCount.textContent = 'Unlikes reçus: 0';
-                controls.appendChild(unlikesCount);
-                videoWrapper.appendChild(controls);
-                videoContainer.appendChild(videoWrapper);
+                document.getElementById('video-container').appendChild(videoWrapper);
             }
         }
 
@@ -332,69 +225,6 @@
                 videoWrapper.remove();
             }
         }
-
-        function handleLike(peerId) {
-            if (!likedUsers[peerId]) {
-                likedUsers[peerId] = 0;
-            }
-            likedUsers[peerId]++;
-            localStorage.setItem('likes', JSON.stringify(likedUsers));
-            updateLikesDisplay(peerId);
-            sendLike(peerId);
-        }
-
-        function handleUnlike(peerId) {
-            if (!unlikedUsers[peerId]) {
-                unlikedUsers[peerId] = 0;
-            }
-            unlikedUsers[peerId]++;
-            localStorage.setItem('unlikes', JSON.stringify(unlikedUsers));
-            updateUnlikesDisplay(peerId);
-            sendUnlike(peerId);
-        }
-
-        function updateLikesDisplay(peerId) {
-            const videoWrapper = document.getElementById(peerId + '-wrapper');
-            if (videoWrapper) {
-                const likesCount = videoWrapper.querySelector('.likes-count');
-                if (likesCount) {
-                    likesCount.textContent = `Likes reçus: ${likedUsers[peerId] || 0}`;
-                }
-            }
-        }
-
-        function updateUnlikesDisplay(peerId) {
-            const videoWrapper = document.getElementById(peerId + '-wrapper');
-            if (videoWrapper) {
-                const unlikesCount = videoWrapper.querySelector('.unlikes-count');
-                if (unlikesCount) {
-                    unlikesCount.textContent = `Unlikes reçus: ${unlikedUsers[peerId] || 0}`;
-                }
-            }
-        }
-
-        function sendLike(peerId) {
-            const conn = peer.connect(peerId);
-            conn.on('open', () => {
-                conn.send({ type: 'like' });
-            });
-        }
-
-        function sendUnlike(peerId) {
-            const conn = peer.connect(peerId);
-            conn.on('open', () => {
-                conn.send({ type: 'unlike' });
-            });
-        }
-
-        // Clean up function
-        function cleanUp() {
-            localStream?.getTracks().forEach(track => track.stop());
-            videoContainer.querySelectorAll('.video-wrapper').forEach(wrapper => wrapper.remove());
-        }
-
-        // Call cleanup on unload
-        window.addEventListener('beforeunload', cleanUp);
     </script>
 </body>
 </html>
