--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -23,10 +23,21 @@
             margin-bottom: 20px;
         }
         video {
-            max-width: 300px;
+          max-width: 300px;
             border: 1px solid #ccc;
             border-radius: 5px;
             margin: 5px;
+        }
+        .controls {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .controls button {
+            margin-bottom: 5px;
+        }
+        .controls p {
+            margin: 0;
         }
         #main-controls {
             display: flex;
@@ -43,6 +54,10 @@
     <div id="video-container">
         <div class="video-wrapper" id="local-wrapper">
             <video id="localVideo" autoplay playsinline muted></video>
+            <div class="controls">     
+                <button class="unlike-button" style="display: none;">⚡</button>
+                <p class="unlikes-count" style="display: none;">Unlikes reçus: 0</p>
+            </div>
         </div>
     </div>
     <div id="main-controls">
@@ -58,9 +73,16 @@
         <button id="callButton">Appeler</button>
         <button id="hangupButton">Raccrocher</button>
         <label>
+            <input type="checkbox" id="muteCheckbox"> Mute Mon Micro
+        </label>
+        <label>
+            <input type="checkbox" id="muteRemoteCheckbox"> Mute Le Micro du Deuxième Utilisateur
+        </label>
+        <label id="cameraLabel">
             Sélectionner la caméra :
             <select id="cameraSelect"></select>
         </label>
+        <label>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
@@ -68,6 +90,10 @@
         let localStream;
         let peer;
         let call;
+        let likedUsers = {};
+        let unlikedUsers = {};
+        let lastCallerId = '';
+        let peerConnections = {};
 
         const callButton = document.getElementById('callButton');
         const hangupButton = document.getElementById('hangupButton');
@@ -75,7 +101,10 @@
         const myIdInput = document.getElementById('myId');
         const peerIdInput = document.getElementById('peerId');
         const localVideo = document.getElementById('localVideo');
+        const muteCheckbox = document.getElementById('muteCheckbox');
+        const muteRemoteCheckbox = document.getElementById('muteRemoteCheckbox');
         const cameraSelect = document.getElementById('cameraSelect');
+        const videoContainer = document.getElementById('video-container');
 
         generateMyIdButton.addEventListener('click', () => {
             const myId = generateRandomId();
@@ -108,10 +137,42 @@
                         incomingCall.on('stream', (remoteStream) => {
                             addRemoteVideo(incomingCall.peer, remoteStream);
                         });
+                        lastCallerId = incomingCall.peer;
+                        peerIdInput.value = lastCallerId;
                     })
                     .catch((err) => {
                         console.error('Failed to get local stream', err);
                     });
+            });
+
+            peer.on('connection', conn => {
+                conn.on('data', data => {
+                    if (data.type === 'like') {
+                        const senderId = conn.peer;
+                        if (!likedUsers[senderId]) {
+                            likedUsers[senderId] = 1;
+                        } else {
+                            likedUsers[senderId]++;
+                        }
+                        updateLikesCount(senderId);
+                    } else if (data.type === 'unlike') {
+                        const senderId = conn.peer;
+                        localStorage.setItem('excludedUser', senderId);
+                        setTimeout(() => {
+                            if (localStorage.getItem('excludedUser') === senderId) {
+                                document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
+                                throw new Error("L'utilisateur est exclu");
+                            }
+                        }, 5000);
+                        if (!unlikedUsers[senderId]) {
+                            unlikedUsers[senderId] = 1;
+                        } else {
+                            unlikedUsers[senderId]++;
+                        }
+                        updateUnlikesCount(senderId);
+
+                    }
+                });
             });
         }
 
@@ -125,6 +186,7 @@
                 .then(stream => {
                     localStream = stream;
                     localVideo.srcObject = stream;
+                    applyMicMute();
                     return stream;
                 })
                 .catch((err) => {
@@ -134,97 +196,202 @@
         }
 
         async function updateCameraSelect() {
+            const device = detectDevice();
+            let constraints = {
+                audio: true,
+                video: { deviceId: cameraSelect.value ? { exact: cameraSelect.value } : undefined }
+            };
+
             const devices = await navigator.mediaDevices.enumerateDevices();
             const videoDevices = devices.filter(device => device.kind === 'videoinput');
             cameraSelect.innerHTML = '';
 
-            videoDevices.forEach((device, index) => {
-                const option = document.createElement('option');
-                option.value = device.deviceId;
-                option.text = `Caméra ${index + 1}`;
-                cameraSelect.appendChild(option);
-            });
+            if (device === 'iOS') {
+                if (videoDevices.length > 1) {
+                    cameraSelect.innerHTML = `
+                        <option value="${videoDevices[0].deviceId}">Caméra 1</option>
+                        <option value="${videoDevices[1].deviceId}">Caméra 2</option>
+                    `;
+                } else {
+                    cameraSelect.innerHTML = `<option value="${videoDevices[0].deviceId}">Caméra 1</option>`;
+                }
+            } else if (device === 'Android') {
+                if (videoDevices.length > 1) {
+                    cameraSelect.innerHTML = `
+                        <option value="${videoDevices[0].deviceId}">Caméra 1</option>
+                        <option value="${videoDevices[1].deviceId}">Caméra 2</option>
+                    `;
+                } else {
+                    cameraSelect.innerHTML = `<option value="${videoDevices[0].deviceId}">Caméra 1</option>`;
+                }
+            } else {
+                videoDevices.forEach((device, index) => {
+                    const option = document.createElement('option');
+                    option.value = device.deviceId;
+                    option.text = `Caméra ${index + 1}`;
+                    cameraSelect.appendChild(option);
+                });
+            }
 
+            // Restore the previously selected camera
             const savedCameraId = localStorage.getItem('selectedCameraId');
             if (savedCameraId) {
                 cameraSelect.value = savedCameraId;
             }
 
-            return {
-                audio: true,
-                video: { deviceId: cameraSelect.value ? { exact: cameraSelect.value } : undefined }
-            };
+            return constraints;
         }
 
-        cameraSelect.addEventListener('change', async () => {
-            localStorage.setItem('selectedCameraId', cameraSelect.value);
-            if (localStream) {
-                const videoTracks = localStream.getVideoTracks();
-                videoTracks.forEach(track => localStream.removeTrack(track));
-                const constraints = await updateCameraSelect();
-                const newStream = await navigator.mediaDevices.getUserMedia(constraints);
-                localStream.addTrack(newStream.getVideoTracks()[0]);
-                localVideo.srcObject = localStream;
+        function detectDevice() {
+            const userAgent = navigator.userAgent || navigator.vendor || window.opera;
+            if (/windows phone/i.test(userAgent)) {
+                return "Windows Phone";
             }
-        });
+            if (/android/i.test(userAgent)) {
+                return "Android";
+            }
+            if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
+                return "iOS";
+            }
+            return "unknown";
+        }
+
+        function applyMicMute() {
+            if (localStream) {
+                const audioTracks = localStream.getAudioTracks();
+                if (audioTracks.length > 0) {
+                    audioTracks[0].enabled = !muteCheckbox.checked;
+                }
+            }
+        }
+
+        function sendMuteSignal(mute) {
+            if (call) {
+                call.peerConnection.getSenders().forEach(sender => {
+                    if (sender.track && sender.track.kind === 'audio') {
+                        sender.track.enabled = !mute;
+                    }
+                });
+            }
+        }
+
+        function addRemoteVideo(peerId, stream) {
+            const videoWrapper = document.createElement('div');
+            videoWrapper.className = 'video-wrapper';
+            videoWrapper.id = peerId;
+
+            const video = document.createElement('video');
+            video.autoplay = true;
+            video.playsInline = true;
+            video.srcObject = stream;
+
+            const likeButton = document.createElement('button');
+            likeButton.textContent = '❤️';
+            likeButton.addEventListener('click', () => sendLike(peerId));
+
+            const unlikeButton = document.createElement('button');
+            unlikeButton.textContent = '⚡';
+            unlikeButton.addEventListener('click', () => sendUnlike(peerId));
+
+            const likeCount = document.createElement('p');
+            likeCount.className = 'likes-count';
+            likeCount.textContent = 'Likes reçus: 0';
+
+            const unlikeCount = document.createElement('p');
+            unlikeCount.className = 'unlikes-count';
+            unlikeCount.textContent = 'Unlikes reçus: 0';
+
+            videoWrapper.appendChild(video);
+            videoWrapper.appendChild(likeButton);
+            videoWrapper.appendChild(likeCount);
+            videoWrapper.appendChild(unlikeButton);
+            videoWrapper.appendChild(unlikeCount);
+
+            videoContainer.appendChild(videoWrapper);
+            peerConnections[peerId] = stream;
+        }
+
+        function updateLikesCount(peerId) {
+            const videoWrapper = document.getElementById(peerId);
+            if (videoWrapper) {
+                const likeCount = videoWrapper.querySelector('.likes-count');
+                likeCount.textContent = `Likes reçus: ${likedUsers[peerId] || 0}`;
+            }
+        }
+
+        function updateUnlikesCount(peerId) {
+            const videoWrapper = document.getElementById(peerId);
+            if (videoWrapper) {
+                const unlikeCount = videoWrapper.querySelector('.unlikes-count');
+                unlikeCount.textContent = `Unlikes reçus: ${unlikedUsers[peerId] || 0}`;
+            }
+        }
+
+        function sendLike(peerId) {
+            const conn = peer.connect(peerId);
+            conn.on('open', () => {
+                conn.send({ type: 'like' });
+            });
+        }
+
+        function sendUnlike(peerId) {
+            const conn = peer.connect(peerId);
+            conn.on('open', () => {
+                conn.send({ type: 'unlike' });
+            });
+        }
 
         callButton.addEventListener('click', () => {
-            const peerId = peerIdInput.value.trim();
-            if (!peerId) {
-                alert('Veuillez entrer l\'ID de la personne à appeler.');
-                return;
+            if (peerIdInput.value) {
+                getLocalStream()
+                    .then(stream => {
+                        const call = peer.call(peerIdInput.value, stream);
+                        call.on('stream', remoteStream => {
+                            addRemoteVideo(peerIdInput.value, remoteStream);
+                        });
+                        lastCallerId = peerIdInput.value;
+                        peerIdInput.value = lastCallerId;
+                    })
+                    .catch(err => {
+                        console.error('Failed to get local stream', err);
+                    });
             }
-
-            getLocalStream()
-                .then((stream) => {
-                    localStream = stream;
-                    localVideo.srcObject = stream;
-                    call = peer.call(peerId, stream);
-                    call.on('stream', (remoteStream) => {
-                        addRemoteVideo(peerId, remoteStream);
-                    });
-                    call.on('close', () => {
-                        removeRemoteVideo(peerId);
-                    });
-                })
-                .catch((err) => {
-                    console.error('Failed to get local stream', err);
-                });
         });
 
         hangupButton.addEventListener('click', () => {
-            if (localStream) {
-                localStream.getTracks().forEach(track => track.stop());
-            }
             if (call) {
                 call.close();
             }
+            localStream.getTracks().forEach(track => track.stop());
             localVideo.srcObject = null;
-            document.querySelectorAll('.video-wrapper').forEach(wrapper => wrapper.remove());
+            videoContainer.innerHTML = '';
         });
 
-        function addRemoteVideo(peerId, remoteStream) {
-            let videoWrapper = document.getElementById(peerId + '-wrapper');
-            if (!videoWrapper) {
-                videoWrapper = document.createElement('div');
-                videoWrapper.className = 'video-wrapper';
-                videoWrapper.id = peerId + '-wrapper';
-                const video = document.createElement('video');
-                video.id = peerId + '-video';
-                video.autoplay = true;
-                video.playsInline = true;
-                video.srcObject = remoteStream;
-                videoWrapper.appendChild(video);
-                document.getElementById('video-container').appendChild(videoWrapper);
-            }
-        }
+        muteCheckbox.addEventListener('change', () => {
+            applyMicMute();
+        });
 
-        function removeRemoteVideo(peerId) {
-            const videoWrapper = document.getElementById(peerId + '-wrapper');
-            if (videoWrapper) {
-                videoWrapper.remove();
+        muteRemoteCheckbox.addEventListener('change', () => {
+            const mute = muteRemoteCheckbox.checked;
+            sendMuteSignal(mute);
+        });
+
+        cameraSelect.addEventListener('change', () => {
+            localStorage.setItem('selectedCameraId', cameraSelect.value);
+            getLocalStream();
+        });
+
+        document.addEventListener('keydown', (e) => {
+            if (e.key === 'Enter') {
+                const textBox = document.querySelector('#peerId');
+                if (textBox) {
+                    if (textBox.value.startsWith('!unlike')) {
+                        sendUnlike(textBox.value.split(' ')[1]);
+                        textBox.value = '';
+                    }
+                }
             }
-        }
+        });
     </script>
 </body>
 </html>
